# zoomy-core

./: .gitignore  DESIGN_dimensional_split.md  INSTALL  _mass_gate.md  _mass_gate.py  pyproject.toml
.cache/basismatrices/: manifest.json
scripts/: regen_goldens.py  verify.py
tests/: README.md  conftest.py
tests/analysis/: test_analysis.py  test_spatial_dispersion.py
tests/fvm/: test_aposteriori_mood_req152.py  test_bc_runtime.py  test_chorin_wetdry_positivity_req174c.py  test_dt_max_wave_free.py  test_elliptic_bc_req174.py  test_elliptic_restart_wiring.py  test_equilibrium_wb.py  test_imex_global_source_req144.py  test_imex_smoke.py  test_implicit_diffusion_dense.py  test_inf_guard_req168.py  test_local_cfl_dt.py  test_mood_positivity.py  test_numerical_wave_speed_req167.py  test_periodic_bc.py  test_riemann_hll_hllc.py  test_rusanov_lazy_spectral_radius_req189.py  test_sigma3d_split.py  test_solver_golden.py  test_solver_honors_nsm_riemann.py  test_splitting_solver_construction.py  test_stage_list_req173.py  test_stay3d_split.py
tests/goldens/: goldenlib.py  m01_swe_1d.txt  m02_swe_2d.txt  m03_sme_l1.txt  m04_sme_l2.txt  m05_sme_2d.txt  m06_elder_sme.txt  m07_sme_inplane.txt  m08_sme_bingham.txt  m09_mlswe.txt  m10_mlsme.txt  m11_vam_1d.txt  m12_vam_escalante.txt  m13_vam_2d.txt  m14_vam_inplane.txt  m15_mlvam.txt  m16_sigma3d.txt  n01_swe2d_order2.txt  n02_time_baseline.json  n02_vam_nsm.txt  n03_sme_gate_guard.txt  p01_foam_vam.txt  p02_generic_c_sme.txt  q01_procedure_c.txt  s01_sme_freeze.txt  s02_chorin_split_bump.txt  s03_chorin_split_mlvam.txt  x01_numpy_wb_solver.txt
tests/mesh/: test_ic_from_mesh.py  test_lsq_boundary_consistency.py  test_lsq_boundary_tangential_req174b.py
tests/model/: test_boundary_conditions_per_field.py  test_cache_correctness.py  test_characteristic_bc.py  test_chorin_pressure_operator.py  test_closure_frame.py  test_closures.py  test_derivation_cache.py  test_derivation_cache_keys.py  test_derived_chain.py  test_double_moment_sme.py  test_foam_opaque_eigenvalues_req187.py  test_foam_param_aux_req183.py  test_foam_project_codegen.py  test_inplane_viscous_couplings_req176c.py  test_layer_mean_closure.py  test_material_closure.py  test_ml_2d.py  test_mlsme_dambreak.py  test_mlswe_dambreak.py  test_mlswe_reference.py  test_mlvam_dambreak.py  test_mlvam_reference.py  test_mlvam_smooth_limit.py  test_model_goldens.py  test_model_references.py  test_phase3_numpy_solve.py  test_project_roundtrip.py  test_quadrature_order_general.py  test_reconstruction_wslot.py  test_register_group.py  test_retain_viscous_req176.py  test_sigma3d.py  test_sigma_transform.py  test_sme_2d.py  test_sme_dambreak.py  test_sme_hswme_spectrum.py  test_sme_model.py  test_sme_reference.py  test_source_drystate_semantics.py  test_split_subsystem_aux_prefix.py  (+11 more)
tests/numerics/: test_fluctuations_are_zero.py  test_implicit_mode.py  test_nsm_goldens.py
tests/solver_ir/: test_elliptic_constants.py  test_march_ir.py  test_procedure_ir.py
tests/symbolic/: test_canonicalise_and_integration.py  test_primitives_calculus.py  test_primitives_canonical.py
tests/systemmodel/: test_cache_runtime_isolation.py  test_chorin_split_jacobian_shape_req169.py  test_declarative_initial_conditions.py  test_depth_law_study_req194.py  test_from_model_bc_attach.py  test_front_doors_agree.py  test_gate_split_req181.py  test_operations.py  test_reconstruction_uses_hinv.py  test_sm_cache_class_source_req188.py  test_sm_cache_req163.py  test_state_from_reconstruction_inverts_req180.py  test_state_reconstruction_inverse.py  test_systemmodel_goldens.py
tests/transformation/: test_cppmodel_projection_no_integral.py  test_lowering_shape_contract.py  test_printer_goldens.py  test_resolve_opaque.py  test_runtime_kernel_contract.py  test_signature_registry.py  test_to_glsl.py  test_to_js.py  test_to_ufl_from_system_model.py  test_userfunctions_contract.py
zoomy_core/: __init__.py  coords.py  derivatives.py
zoomy_core/analysis/: __init__.py  hyperbolicity.py  linearisation.py  pde_system.py  pencil.py  plane_wave.py  plotting.py  reduce_pencil.py  stability.py  system_model_analysis.py
zoomy_core/cli/: main.py
zoomy_core/decorators/: __init__.py  decorators.py
zoomy_core/derivation/: __init__.py  ansatz.py  basis.py  closure.py  closures.py  coords.py  eliminate_constraints.py  flow.py  modal.py  model.py  operations.py  physical_z.py  projection.py  system_extract.py  transformations.py
zoomy_core/fvm/: bernoulli_wb.py  flux.py  generated_model_solver.py  imex_ark.py  jvp_numpy.py  nonconservative_flux.py  ode.py  projection_solver.py  reconstruction.py  riemann_solvers.py  sigma3d_split_solver.py  solver_chorin_vam_numpy.py  solver_column.py  solver_dae_numpy.py  solver_imex_numpy.py  solver_numpy.py  solver_pressurized_imex.py  solver_splitting_numpy.py  stay3d_split_solver.py  symbolic_numerics.py  symbolic_numerics_v2.py  timestepping.py  userfunctions.py
zoomy_core/kernel/: __init__.py  kernel.py
zoomy_core/mesh/: __init__.py  base_mesh.py  browse_meshes.py  column_structure.py  fvm_mesh.py  lsq_mesh.py  lsq_reconstruction.py  mesh.py  mesh_catalog.py  mesh_extrude.py  mesh_ic.py  mesh_util.py  petscmesh.py  subvolume_mesh.py
zoomy_core/misc/: __init__.py  custom_types.py  description.py  interpolation.py  io.py  logger_config.py  misc.py  save_session.py
zoomy_core/model/: analysis.py  analysis_linear.py  aux_boundary_conditions.py  basefunction.py  basemodel.py  boundary_conditions.py  custom_sympy_functions.py  derivative_workflow.py  equation.py  initial_conditions.py  kernel_functions.py  model.py  numerical_model.py  numerics.py  operations.py  reconstruction_inverse.py  splitter.py  state.py  symbolic_numerics.py
zoomy_core/numerics/: __init__.py  depth_law_study.py  numerical_system_model.py
zoomy_core/postprocessing/: __init__.py  analytic.py  column_plots.py  mesh_plots.py  panels.py  plot_field_map.py  plotting.py  point_data.py  postprocessing.py  style.py  vtk_to_gif.py
zoomy_core/preprocessing/: openfoam_moments.py
zoomy_core/solver/: __init__.py  ir.py  (+4 more)
(+193 files in other folders)
